Revision history for {{$dist->name}}

{{$NEXT}}
    - disable another critic policy

1.172230  2017-08-11 14:07:34+02:00 Europe/Berlin
    - remove need for manual gitignore and exclude entries
    - switch to github issues as default tracker
    - exclude problematic critic policies
    - include contributors section

1.151340  2015-05-14 10:55:34+02:00 Europe/Berlin
    - exclude_match needs to be an array with data or not passed on

1.150590  2015-02-28 13:21:53+01:00 Europe/Berlin
    - remove spelling test stuff
    - Revert "use a readme plugin that actually generates a readme in the release"
    - add a way to define prereq skipping options

1.150521  2015-02-21 18:29:39+01:00 Europe/Berlin
    - i am actually an idiot

1.150520  2015-02-21 18:06:18+01:00 Europe/Berlin
    - add cpanfile generation
    - handle auto-generated files more sanely
    - use a readme plugin that actually generates a readme in the release

1.150512  2015-02-20 14:26:20+01:00 Europe/Berlin
    - sync files Git::Check complains about and Git::Commit commits on release

1.150511  2015-02-20 13:25:09+01:00 Europe/Berlin
    - allow single values for exclude_match when loaded through @Filter

1.150510  2015-02-20 04:42:01+01:00 Europe/Berlin
    - copy Makefile.PL to build dir
    - fix up a name replacement oversight

1.141830  2014-07-02 23:40:35+02:00 Europe/Berlin
    - updates for dzil 5.019

1.120300  2012-01-30 14:36:47 Europe/Berlin

    - Dist::Zilla::App::cover is now a dependency to ensure it's available on
      the command line
    - .gitignore, README.PATCHING and perlcritic.rc are now generated during the
      build phase
    - added an option to exclude files by regex
    - release process now bumps the version in the release commit
    - AutoVersion instead of Git::NextVersion
    - minimize noise in development commits by restricting metadata updates to
      version and github urls to release time

0.023     2011-12-30 15:29:54 EST5EDT
